test_suite5/ALAN/test_suite/alan-2022-examples/failing/000850_mutation.alan
source Q019a begin boolean I, call lL0(); relax end
